@@ -13,7 +13,7 @@ user interface) for R, based on the tcltk package.
 \tabular{ll}{
 Package: \tab Rcmdr\cr
 Version: \tab 2.0-4\cr
-Date: \tab 2014/01/24\cr
+Date: \tab 2014/03/26\cr
 Depends: \tab  R (>= 3.0.0), grDevices, utils, splines\cr
 Imports: \tab tcltk\cr
 Suggests: \tab abind, aplpack, car (>= 2.0-18), colorspace, effects (>= 1.0-7),
