@@ -2,6 +2,8 @@ Changes to Version 2.0-4
 
   o Updated Slovenian translation (with thanks to Jaro.Lajovic and Matjaz Jeran).
 
+  o Fixed numSummary() so that it doesn't fail when there's an empty factor level (problem reported by Alan Mainwaring).
+
 Changes to Version 2.0-3
 
   o Updated Polish translation (with thanks to Lukasz Daniel).
@@ -12,7 +14,7 @@ Changes to Version 2.0-3
 
   o Small interface improvements.
 
-  o Fixed bug in French translation preventing loading R Markdown files (reported by JC)rC)my Mazet).
+  o Fixed bug in French translation preventing loading R Markdown files (reported by J. Mazet).
 
 Changes to Version 2.0-2
 
